--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <script>
     window.$docsify = {
       name: 'Free for developers',
-      repo: 'ripienaar/free-for-dev',
-      search: ['/']
+      repo: 'NectoT/free-for-dev',
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
