--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app">Loading...</div>
   <script>
     window.$docsify = {
-      name: 'Free for developers',
+      name: 'Not free for developers',
       repo: 'NectoT/free-for-dev',
     }
   </script>
