--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
 </head>
 <body>
+  <h1> This is a header </h1>
   <div id="app">Loading...</div>
   <script>
     window.$docsify = {
